--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
     "@nguniversal/express-engine": "^9.0.1",
+    "@ngx-translate/core": "~10.0.2",
+    "@ngx-translate/http-loader": "3.0.1",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "grpc-web": "^1.2.1",
     "lodash": "^4.17.19",
+    "my-cookie-js": "0.0.5",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.3",
+    "protoc-gen-grpc-ts": "^1.0.1",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
+    "ts-protoc-gen": "^0.13.0",
     "tslib": "^1.10.0",
     "uuid": "^8.2.0",
     "zone.js": "~0.10.2"
