--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/forms": "~9.0.2",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/platform-server": "~9.0.2",
@@ -31,9 +32,11 @@
     "@nguniversal/express-engine": "^9.0.1",
     "@ngx-translate/core": "~10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
+    "angular-dplayer": "^1.0.8",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "grpc-web": "^1.2.1",
+    "hls.js": "^0.14.16",
     "lodash": "^4.17.19",
     "my-cookie-js": "0.0.5",
     "primeicons": "^4.0.0",
@@ -44,6 +47,11 @@
     "ts-protoc-gen": "^0.13.0",
     "tslib": "^1.10.0",
     "uuid": "^8.2.0",
+    "video.js": "^7.9.7",
+    "videojs-contrib-hls": "^5.15.0",
+    "videojs-contrib-quality-levels": "^2.0.9",
+    "videojs-flash": "^2.2.1",
+    "videojs-hls-quality-selector": "^1.1.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
