--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/core": "~10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
     "angular-dplayer": "^1.0.8",
+    "echarts": "^5.0.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "grpc-web": "^1.2.1",
