--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "hls.js": "^0.14.16",
     "lodash": "^4.17.19",
     "my-cookie-js": "0.0.5",
+    "ngx-socket-io": "^3.2.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.3",
     "protoc-gen-grpc-ts": "^1.0.1",
+    "reconnecting-websocket": "^4.4.0",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
     "ts-protoc-gen": "^0.13.0",
