--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR /app
 COPY dist/. dist/.
 EXPOSE 8080
 WORKDIR /app/dist/leon-angular-learn/browser
+# ng build --prod --build--optimizer
 # CMD angular-http-server -p 8080 -o 
 CMD angular-http-server --https --key ./assets/keys/production.key --cert ./assets/keys/production.crt -p 8080 -o 
